--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<style type="text/css">
 		#board{
 			text-align: center;
-			width: 200px; 
+			width: 180px; 
 			margin: 0px auto;
 			background-color: #cdcdcd;
 		}
@@ -31,64 +31,80 @@
 
 </head>
 <body>
-<h1></h1>
+	<h1></h1>
 	<div class="well" id="board">
 		<table>
-		<tr>
-		<td colspan="4" id="thescreen" class="output well">          
-		</td>
-		</tr>
-				<tr>
-					<td><button class="btn btn-block btn-info button" onclick="clearscreen();">AC</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen();">-</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen();">-</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen();">/</button></td>
-				</tr>
-				<tr>
-					<td><button class="btn btn-block btn-info button" onclick="screen(7);">7</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen(8);">8</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen(9);">9</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen('*');">X</button></td>
-				</tr>
-				<tr>
-					<td><button class="btn btn-block btn-info button" onclick="screen(4);">4</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen(5);">5</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen(6);">6</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen('-');">-</button></td>
-				</tr>
-				<tr>
-					<td><button class="btn btn-block btn-info button" onclick="screen(1);">1</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen(2);">2</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen(3);">3</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen('+');">+</button></td>
-				</tr>
-				<tr>
-					<td><button class="btn btn-block btn-info button" onclick="screen(0);">0</button></td>
-					<td colspan="2"><button class="btn btn-block btn-info button" onclick="calculate();">=</button></td>
-					<td><button class="btn btn-block btn-info button" onclick="screen('+');">+</button></td>
-				</tr>
+			<tr>
+				<td colspan="4" id="thescreen" class="output well">          
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2"><button class="btn btn-block btn-danger button" onclick="totalclearscreen();">AC</button></td>
+				<td colspan="2"><button class="btn btn-block btn-warning button" onclick="clearscreen();">C</button></td>
+			</tr>
+			<tr>
+				<td><button class="btn btn-block btn-info button" onclick="screen(7);">7</button></td>
+				<td><button class="btn btn-block btn-info button" onclick="screen(8);">8</button></td>
+				<td><button class="btn btn-block btn-info button" onclick="screen(9);">9</button></td>
+				<td><button class="btn btn-block btn-primary button" onclick="screen('/');">/</button></td>
+			</tr>
+			<tr>
+				<td><button class="btn btn-block btn-info button" onclick="screen(4);">4</button></td>
+				<td><button class="btn btn-block btn-info button" onclick="screen(5);">5</button></td>
+				<td><button class="btn btn-block btn-info button" onclick="screen(6);">6</button></td>
+				<td><button class="btn btn-block btn-primary button" onclick="screen('*');">X</button></td>
+			</tr>
+			<tr>
+				<td><button class="btn btn-block btn-info button" onclick="screen(1);">1</button></td>
+				<td><button class="btn btn-block btn-info button" onclick="screen(2);">2</button></td>
+				<td><button class="btn btn-block btn-info button" onclick="screen(3);">3</button></td>
+				<td><button class="btn btn-block btn-primary button" onclick="screen('-');">-</button></td>
+			</tr>
+			<tr>
+				<td><button class="btn btn-block btn-info button" onclick="screen(0);">0</button></td>
+				<td colspan="2"><button class="btn btn-block btn-primary button" onclick="calculate();">=</button></td>
+				<td><button class="btn btn-block btn-primary button" onclick="screen('+');">+</button></td>
+			</tr>
 
-			</table>
-		</div>
+		</table>
+	</div>
 
-	</body>
+</body>
 
-	<script type="text/javascript">
-		var toberun = "";
-		function screen(dispnumb){
-			toberun = toberun + dispnumb;
-			console.log(toberun)
-			thescreen.innerHTML = dispnumb;
+<script type="text/javascript">
+	var totalcalc = "";
+	var buildscreen = "";
+	function screen(numbinput){
+		if (typeof numbinput !== 'number'){
+			buildscreen = buildscreen;
+			totalcalc = totalcalc + numbinput;
+			thescreen.innerHTML = buildscreen;
+			buildscreen = "";
 		}
-		function clearscreen(dispnumb){
-			toberun = "";
-			console.log(toberun)
-			thescreen.innerHTML = dispnumb;
-		}
-		function calculate(){
-			thescreen.innerHTML = eval(toberun);
+		else {
+			buildscreen = buildscreen + numbinput;
+			totalcalc = totalcalc + numbinput;
+			thescreen.innerHTML = buildscreen;
 		}
 
-	</script>
+		console.log(totalcalc)
+		//thescreen.innerHTML = dispnumb;
+	}
+	function clearscreen(){
+		buildscreen = "";
+		console.log(totalcalc)
+		thescreen.innerHTML = buildscreen;
+	}
+	function totalclearscreen(){
+		var totalcalc = "";
+		var buildscreen = "";
+		console.log(totalcalc)
+		thescreen.innerHTML = buildscreen;
+	}
+	function calculate(){
+		thescreen.innerHTML = eval(totalcalc);
+	}
 
-	</html>
+</script>
+
+</html>
